...
    tools:context="com.example.naxasurvay.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout android:id="@+id/survayFormTopLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#3dcded"
        android:layout_margin="5dp"
        android:layout_weight="1">

...
            android:src="@drawable/surveys_img"
            android:scaleType="fitXY"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/survayForm">

            <TextView android:layout_marginTop="90dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Survey Form"
...
