...
                                    android:text="Husband"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:textColor="#000" />


                                <com.thomashaertel.widget.MultiSpinner
                                    android:id="@+id/spinnerMulti_Husband"
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_alignParentRight="true"
                                    android:layout_alignParentTop="true"
                                    android:layout_toRightOf="@+id/spinner_husband" />

...
